--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            My Webpage! Learned from CS50. :)
+            My Webpage! 
         </title>
         <body>
             Hello World!
